# TCC

./: .gitignore  README.md  Template_Proposta_TCC_V6.doc
21.1/: a  a.py  b  mult_sat.ket  mult_sat_base.ket  print.py  print_all.py  results.csv  sat copy.cnf  sat.cnf  test.ipynb  test.py  verify.py
21.1/SAT-Solver-using-DPLL-master/: inp.txt
apresentacao-2021/: grover.m
grover-sat/DPLL-SAT-solver-master/: main.py
grover-sat/DPLL-SAT-solver-master/test_cases/: 10.cnf  (+54 more)
grover-sat/crossover/: Makefile  pyproject.toml
grover-sat/crossover/output/: partial.txt  partial_new_-1.txt  partial_new_15.txt
grover-sat/crossover/sats/: gen_sats_ranges.py  print_sats_ranges.py
grover-sat/crossover/src/: quant_sat.ket  quant_sat_single.ket  range_values.csv  sats.csv  tableau.py
grover-sat/crossover/tests/: test_crossover.ket
grover-sat/nightly/: pyproject.toml  results.csv
grover-sat/nightly/output/: compile_results.py  results.csv  results_1-4.csv  results_iteraion_0.csv  results_iteraion_2.csv  results_iteraion_5.csv  results_iteraion_7.csv  results_iteraion_8.csv  results_iteraion_9.csv
grover-sat/nightly/src/: quant_sat_single.ket
grover-sat/nightly/tests/: test_nightly.ket
ket/ket/: pyproject.toml
ket/ket/ket/: grover.ket  test.ket
ket/ket/tests/: test_ket.py
octave/: amplitude_damping.m  amplitude_damping_animated.m  base_matrices.m  bit_flip.m  bit_flip_animated.m  bit_phase_flip.m  bit_phase_flip_animated.m  bloch_sphere.m  depo_animated.m  depolarization.m  expected_value.m  new_bloch.m  octave-workspace  phase_flip.m  phase_flip_animated.m  plot_bloch.m  test.m
qasm2circ-v1.4/: qasm2png  qasm2tex.py
qasm2circ-v1.4/samples/: test15.tex
qiskit/oraculo/: cnf_circuits  logical_circuit  makefile  pyproject.toml
qiskit/oraculo/oraculo/: Custom oracle copy.ipynb  Custom oracle.ipynb  Untitled.ipynb
qiskit/oraculo/tests/: test_oraculo.py
tcc2/: sats.csv
tcc2/crossover/: Makefile  final.txt  out.txt  partial1.2.txt  partial3_rev.txt  partial4_single.txt  partial_new_0.txt  partial_new_14.txt  partial_{START}.txt  pyproject.toml  results.csv  results_27_2.csv  results_single_4.csv  test.txt
tcc2/crossover/crossover/: backup_correct.ket  print_results.py  quant_sat.ket
tcc2/crossover/output/: final_new.csv  partial2.txt  results unkown size.csv  results_new_{START}.csv
tcc2/crossover/sats/: gen_sat.py  gen_sats_ranges.py  range_values.csv  reachable_nums.py  separate_sats.py
tcc2/crossover/src/: gen_sat.py  gen_sats_ranges.py  out.txt  print.py  print_results.py  quant_sat.ket  quant_sat_single.ket  range_values.csv  test.ket  test.py
tcc2/crossover/tests/: test_crossover.py
tcc2/nightly/: Makefile
(+65 files in other folders)
