[tool.poetry]
name = "crossover"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
PyQt5 = "^5.15.6"
qubox-ufsc-quantuloop-client = {url = "https://qubox.ufsc.br:4242/download/qubox_ufsc_quantuloop_client-0.1.1-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
ket-lang = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
