[tool.poetry]
name = "ket"
version = "0.1.0"
description = ""
authors = ["Teo <teogallarza@gmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
ket-lang = "^0.1b7"
ipython = "^7.20.0"
ipykernel = "^5.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
