[tool.poetry]
name = "oraculo"
version = "0.1.0"
description = ""
authors = ["Teo <teogallarza@gmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
qiskit = "^0.23.0"
jupyter = "^1.0.0"
ipykernel = "^5.3.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
