[tool.poetry]
name = "crossover"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ket-lang = "^0.3.3"
matplotlib = "^3.5.2"
numpy = "^1.22.4"
pandas = "^1.4.2"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
